# tracking-status-normalizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/mappings/: carrier_status_mapping.json
docs/: architecture.md  carrier-governance-model.md  cli-guide.md  domain-model.md  exporters-guide.md  governance-architecture.md  status-taxonomy.md
docs/adr/: ADR-001-engine-first-principle.md  ADR-002-governance-layer.md  ADR-003-operational-coverage-matrix.md  ADR-004-capability-classification.md
examples/: README.md  analyze_lifecycle.py  catalog_analysis.py  coverage_analysis.py  governance_report.csv  governance_report.json  governance_report.md  load_and_process_shipment.py  normalize_status.py  process_shipment.py  sample_mapping.json  sample_shipment.json  unknown_status_report.py  validate_lifecycle.py
examples/data/: colissimo_delivery.json  dhl_delivery.json  invalid_lifecycle.json  locker_delivery.json  pickup_expired.json  return_flow.json
src/tracking_status_normalizer/: __init__.py
src/tracking_status_normalizer/analysis/: lifecycle_analyzer.py  lifecycle_summary.py
src/tracking_status_normalizer/api/: app.py  errors.py  schemas.py
src/tracking_status_normalizer/catalog/: carrier_catalog.py  catalog_analyzer.py  catalog_stats.py  unmapped_report.py  unmapped_report_generator.py
src/tracking_status_normalizer/cli/: commands.py  governance_cli.py  main.py
src/tracking_status_normalizer/domain/: canonical_status.py  shipment_outcome.py  status_category.py  status_definition.py  status_registry.py  transition_registry.py  transition_validator.py
src/tracking_status_normalizer/governance/coverage/: capability.py  capability_definition.py  (+4 more)
src/tracking_status_normalizer/io/: shipment_file.py  shipment_loader.py
src/tracking_status_normalizer/normalization/: carrier_status.py  coverage_analyzer.py  coverage_result.py  mapping_loader.py  mapping_registry.py  mapping_rule.py  normalization_result.py  normalizer.py  test_catalog_analyzer.py  text_normalizer.py  unknown_status_detector.py
src/tracking_status_normalizer/processing/: processing_summary.py  processing_summary_builder.py  shipment_processor.py  shipment_result.py
src/tracking_status_normalizer/validation/: lifecycle_validator.py  validation_result.py
tests/unit/: test_api.py  test_capability.py  test_capability_definition.py  test_cli.py  test_coverage_analyzer.py  test_coverage_level.py  test_coverage_result.py  test_csv_exporter.py  test_gap.py  test_gap_analysis.py  test_gap_rules.py  test_gap_severity.py  test_governance_cli.py  test_governance_command.py  test_governance_report.py  test_governance_report_builder.py  test_html_exporter.py  test_json_exporter.py  test_lifecycle_analyzer.py  test_lifecycle_validator.py  test_mapping_loader.py  test_markdown_exporter.py  test_maturity_level.py  test_maturity_result.py  test_maturity_rules.py  test_maturity_score.py  test_normalizer.py  test_operational_coverage.py  test_readiness_assessment.py  test_readiness_level.py  test_readiness_result.py  test_recommendation.py  test_recommendation_engine.py  test_recommendation_priority.py  test_shipment_loader.py  test_shipment_processor.py  test_smoke.py  test_status_registry.py  test_text_normalizer.py  test_transition_validator.py  (+2 more)
(+20 files in other folders)
