[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "tracking-status-normalizer"
version = "1.0.0"
description = "A Python component that normalizes heterogeneous carrier tracking events into a unified shipment status taxonomy."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

authors = [
    { name = "Vincent Gueret" }
]

keywords = [
    "tracking",
    "shipment",
    "logistics",
    "normalization",
    "carriers"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = []

[project.urls]
Homepage = "https://github.com/Vincecodeur/tracking-status-normalizer"
Repository = "https://github.com/Vincecodeur/tracking-status-normalizer"
Issues = "https://github.com/Vincecodeur/tracking-status-normalizer/issues"

[project.optional-dependencies]
api = [
    "fastapi",
    "uvicorn[standard]"
]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "build>=1.2",
    "fastapi",
    "uvicorn[standard]",
    "httpx"
]


[project.scripts]
tsn = "tracking_status_normalizer.cli.main:main"
tracking-status-normalizer = "tracking_status_normalizer.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tracking_status_normalizer"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --import-mode=importlib"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]